python text script updated to include language and tokens

--- a/notebooks/tokens.ipynb
+++ b/notebooks/tokens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,67 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = list(db.datasciences.find({}))"
+    "jobs = list(db.datasciences_analysis.find({\"language\": \"en\"}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from text_analyzer import JobsWords\n",
-    "import en_core_web_sm\n",
-    "EN_NLP = en_core_web_sm.load()\n",
-    "MODELS = {\n",
-    "    \"en\": EN_NLP\n",
-    "}\n",
-    "TEXT_ANALYZER = JobsWords(\"-\", MODELS)"
+    "jobs_tokens = [job[\"tokens\"] for job in jobs]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_job_tokens(text_analyzer, text):\n",
-    "\n",
-    "    try:\n",
-    "        language = text_analyzer.get_language(text)\n",
-    "        clean_text = text_analyzer.get_reg(text)\n",
-    "        tokens = text_analyzer.get_tokens(language, clean_text)\n",
-    "    except: # pylint: disable=bare-except\n",
-    "        tokens = None\n",
-    "\n",
-    "    return tokens"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobs_tokens = {job[\"job_id\"]: get_job_tokens(TEXT_ANALYZER, job[\"text\"]) for job in jobs}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleaned_jobs = {job_id: \" \".join(text) for job_id,text in jobs_tokens.items() if text is not None}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -129,27 +94,34 @@
        "TfidfVectorizer()"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectorizer.fit(list(cleaned_jobs.values()))"
+    "vectorizer.fit(jobs_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectors = vectorizer.transform(list(cleaned_jobs.values()))"
+    "vectors = vectorizer.transform(jobs_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,20 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 Counter({1: 9647, 0: 8849, 2: 3141})\n",
-      "4 Counter({0: 9138, 2: 8348, 1: 2925, 3: 1226})\n",
-      "5 Counter({0: 9083, 2: 7819, 1: 2841, 3: 1216, 4: 678})\n",
-      "6 Counter({3: 9083, 1: 7819, 0: 2841, 2: 1216, 4: 677, 5: 1})\n",
-      "7 Counter({3: 7200, 4: 5296, 6: 3218, 1: 2480, 0: 1888, 2: 1017, 5: 538})\n",
-      "8 Counter({3: 6343, 4: 4180, 7: 3118, 6: 2752, 1: 2316, 0: 1602, 2: 955, 5: 371})\n",
-      "9 Counter({3: 6186, 4: 4005, 7: 2964, 6: 2688, 1: 1995, 0: 1527, 8: 1012, 2: 895, 5: 365})\n"
+      "3 Counter({1: 3840, 2: 2980, 0: 1541})\n",
+      "4 Counter({1: 3052, 2: 2663, 3: 1653, 0: 993})\n",
+      "5 Counter({1: 2967, 2: 2520, 3: 1561, 0: 866, 4: 447})\n",
+      "6 Counter({5: 2118, 1: 1984, 2: 1874, 3: 1160, 0: 822, 4: 403})\n",
+      "7 Counter({5: 2087, 1: 1932, 2: 1817, 3: 857, 0: 816, 6: 450, 4: 402})\n",
+      "8 Counter({1: 2056, 6: 1877, 2: 1695, 4: 811, 0: 735, 3: 424, 5: 392, 7: 371})\n",
+      "9 Counter({1: 1907, 6: 1700, 2: 1443, 3: 801, 4: 793, 0: 654, 5: 377, 7: 349, 8: 337})\n"
      ]
     }
    ],
@@ -302,27 +274,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clusters:  3 silhoutte:  0.0035569906243357414 Counter({1: 9647, 0: 8849, 2: 3141})\n",
-      "clusters:  4 silhoutte:  0.004013278931849127 Counter({0: 9138, 2: 8348, 1: 2925, 3: 1226})\n",
-      "clusters:  5 silhoutte:  0.003335460253908832 Counter({0: 9083, 2: 7819, 1: 2841, 3: 1216, 4: 678})\n",
-      "clusters:  6 silhoutte:  -0.03696674436323316 Counter({3: 9083, 1: 7819, 0: 2841, 2: 1216, 4: 677, 5: 1})\n",
-      "clusters:  7 silhoutte:  0.00580043896036365 Counter({3: 7200, 4: 5296, 6: 3218, 1: 2480, 0: 1888, 2: 1017, 5: 538})\n",
-      "clusters:  8 silhoutte:  0.006023685332753421 Counter({3: 6343, 4: 4180, 7: 3118, 6: 2752, 1: 2316, 0: 1602, 2: 955, 5: 371})\n",
-      "clusters:  9 silhoutte:  0.0074424819422708845 Counter({3: 6186, 4: 4005, 7: 2964, 6: 2688, 1: 1995, 0: 1527, 8: 1012, 2: 895, 5: 365})\n"
+      "clusters:  3 silhoutte:  0.0032155173018247442 Counter({1: 3840, 2: 2980, 0: 1541})\n",
+      "clusters:  4 silhoutte:  0.005411973620085127 Counter({1: 3052, 2: 2663, 3: 1653, 0: 993})\n",
+      "clusters:  5 silhoutte:  0.0064236185419693425 Counter({1: 2967, 2: 2520, 3: 1561, 0: 866, 4: 447})\n",
+      "clusters:  6 silhoutte:  0.0069507927397844125 Counter({5: 2118, 1: 1984, 2: 1874, 3: 1160, 0: 822, 4: 403})\n",
+      "clusters:  7 silhoutte:  0.006229298069631861 Counter({5: 2087, 1: 1932, 2: 1817, 3: 857, 0: 816, 6: 450, 4: 402})\n",
+      "clusters:  8 silhoutte:  0.00560083911315089 Counter({1: 2056, 6: 1877, 2: 1695, 4: 811, 0: 735, 3: 424, 5: 392, 7: 371})\n",
+      "clusters:  9 silhoutte:  0.006046513592864126 Counter({1: 1907, 6: 1700, 2: 1443, 3: 801, 4: 793, 0: 654, 5: 377, 7: 349, 8: 337})\n",
+      "clusters:  10 silhoutte:  0.006511261447497403 Counter({1: 1892, 6: 1646, 2: 1409, 3: 793, 4: 733, 0: 609, 9: 361, 7: 343, 8: 328, 5: 247})\n",
+      "clusters:  11 silhoutte:  0.00618071450395005 Counter({4: 1881, 8: 1633, 2: 1394, 3: 781, 1: 732, 7: 400, 10: 354, 0: 354, 9: 319, 6: 268, 5: 245})\n",
+      "clusters:  12 silhoutte:  0.006978848321794348 Counter({4: 1855, 8: 1546, 2: 1321, 3: 769, 1: 558, 11: 479, 7: 382, 10: 349, 0: 323, 9: 308, 6: 255, 5: 216})\n",
+      "clusters:  13 silhoutte:  0.008484369318224471 Counter({4: 1765, 8: 1447, 2: 1184, 3: 723, 6: 566, 1: 505, 11: 412, 12: 383, 10: 326, 7: 317, 0: 291, 9: 240, 5: 202})\n",
+      "clusters:  14 silhoutte:  0.008581821750383838 Counter({4: 1267, 8: 1240, 2: 1091, 13: 988, 3: 669, 6: 554, 1: 502, 11: 399, 12: 371, 7: 295, 0: 285, 10: 274, 9: 229, 5: 197})\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sectorea\\Code\\etl\\src\\python\\.etl\\lib\\site-packages\\sklearn_extra\\cluster\\_k_medoids.py:235: UserWarning: Cluster 9 is empty! self.labels_[self.medoid_indices_[9]] may not be labeled with its corresponding cluster (9).\n",
+      "C:\\Users\\Sectorea\\Code\\etl\\src\\python\\.etl\\lib\\site-packages\\sklearn_extra\\cluster\\_k_medoids.py:235: UserWarning: Cluster 14 is empty! self.labels_[self.medoid_indices_[14]] may not be labeled with its corresponding cluster (14).\n",
       "  \"its corresponding cluster ({k}).\".format(k=k)\n"
      ]
     },
@@ -330,44 +307,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clusters:  10 silhoutte:  0.006056057381196205 Counter({3: 6183, 4: 3999, 6: 2685, 9: 2039, 1: 1995, 0: 1524, 8: 1012, 7: 940, 2: 895, 5: 365})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sectorea\\Code\\etl\\src\\python\\.etl\\lib\\site-packages\\sklearn_extra\\cluster\\_k_medoids.py:235: UserWarning: Cluster 8 is empty! self.labels_[self.medoid_indices_[8]] may not be labeled with its corresponding cluster (8).\n",
-      "  \"its corresponding cluster ({k}).\".format(k=k)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "clusters:  11 silhoutte:  0.005931919270821648 Counter({3: 6153, 4: 3979, 9: 2677, 1: 1984, 10: 1792, 0: 1517, 6: 1011, 2: 895, 8: 749, 7: 516, 5: 364})\n",
-      "clusters:  12 silhoutte:  0.0021626089087969885 Counter({3: 6157, 4: 3983, 9: 2682, 10: 2203, 1: 1986, 0: 1517, 2: 897, 11: 885, 6: 801, 5: 365, 7: 161})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sectorea\\Code\\etl\\src\\python\\.etl\\lib\\site-packages\\sklearn_extra\\cluster\\_k_medoids.py:235: UserWarning: Cluster 10 is empty! self.labels_[self.medoid_indices_[10]] may not be labeled with its corresponding cluster (10).\n",
-      "  \"its corresponding cluster ({k}).\".format(k=k)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "clusters:  13 silhoutte:  -0.00010753132887084867 Counter({3: 6140, 4: 3958, 9: 2667, 1: 1982, 0: 1516, 12: 1379, 2: 895, 6: 885, 10: 683, 7: 579, 8: 432, 5: 363, 11: 158})\n",
-      "clusters:  14 silhoutte:  0.002338623141648346 Counter({3: 5840, 4: 3751, 9: 2602, 1: 1715, 0: 1432, 13: 1350, 12: 1157, 2: 867, 6: 769, 10: 667, 7: 566, 8: 421, 5: 360, 11: 140})\n",
-      "clusters:  15 silhoutte:  -0.028945066679909634 Counter({3: 6092, 1: 3942, 9: 2683, 14: 1761, 0: 1547, 13: 1398, 12: 1198, 6: 801, 10: 698, 7: 580, 8: 427, 2: 363, 11: 145, 4: 1, 5: 1})\n",
-      "clusters:  16 silhoutte:  -0.028553841519490194 Counter({3: 5926, 1: 3840, 9: 2639, 14: 1734, 0: 1523, 13: 1391, 15: 1171, 12: 838, 6: 798, 10: 537, 7: 453, 2: 349, 8: 292, 11: 144, 4: 1, 5: 1})\n",
-      "clusters:  17 silhoutte:  -0.02616513138878682 Counter({3: 5595, 1: 3609, 16: 2714, 0: 1652, 11: 1593, 15: 1177, 12: 1159, 7: 930, 6: 784, 13: 738, 9: 488, 10: 466, 8: 312, 2: 282, 14: 136, 4: 1, 5: 1})\n",
-      "clusters:  18 silhoutte:  -0.027360675206779993 Counter({3: 5639, 1: 3625, 17: 2114, 11: 1671, 0: 1659, 15: 1268, 12: 1131, 16: 870, 6: 791, 13: 742, 9: 492, 10: 483, 7: 419, 8: 313, 2: 280, 14: 138, 4: 1, 5: 1})\n",
-      "clusters:  19 silhoutte:  -0.026138537238210094 Counter({18: 4412, 3: 3863, 1: 2827, 17: 1587, 11: 1563, 15: 1186, 0: 1150, 7: 745, 6: 710, 16: 666, 13: 661, 12: 609, 10: 567, 9: 403, 8: 384, 2: 188, 14: 114, 4: 1, 5: 1})\n"
+      "clusters:  15 silhoutte:  0.008581821750383838 Counter({4: 1267, 8: 1240, 2: 1091, 13: 988, 3: 669, 6: 554, 1: 502, 11: 399, 12: 371, 7: 295, 0: 285, 10: 274, 9: 229, 5: 197})\n",
+      "clusters:  16 silhoutte:  0.008380023841378408 Counter({4: 1277, 8: 1240, 2: 1140, 13: 980, 3: 680, 1: 495, 7: 426, 11: 392, 12: 332, 0: 284, 10: 283, 15: 232, 9: 220, 6: 203, 5: 177})\n",
+      "clusters:  17 silhoutte:  0.008431859752278868 Counter({4: 1120, 8: 1093, 2: 1028, 13: 914, 3: 636, 16: 587, 1: 456, 6: 382, 11: 358, 12: 313, 10: 304, 7: 303, 0: 257, 15: 242, 9: 212, 5: 156})\n",
+      "clusters:  18 silhoutte:  -0.013641235312952771 Counter({4: 1120, 8: 1093, 2: 1028, 13: 914, 3: 636, 16: 586, 1: 456, 6: 382, 11: 358, 12: 313, 10: 304, 7: 303, 0: 257, 15: 242, 9: 212, 5: 156, 17: 1})\n",
+      "clusters:  19 silhoutte:  -0.013101413492293046 Counter({4: 998, 8: 973, 2: 935, 18: 796, 13: 719, 3: 574, 16: 503, 1: 448, 6: 368, 11: 349, 12: 304, 7: 294, 10: 271, 0: 255, 15: 222, 9: 208, 5: 143, 17: 1})\n"
      ]
     }
    ],
@@ -381,6 +325,34 @@
     "    sil.append(sil_average)\n",
     "    print(\"clusters: \", n, \"silhoutte: \", sil_average, Counter(y_cocluster))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
