--- a/src/python/notebooks/mongo.ipynb
+++ b/src/python/notebooks/mongo.ipynb
@@ -23,30 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-fd71b794c340>, line 11)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-fd71b794c340>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    av)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "db[\"linkedins_analysis_2\"].aggregate(\t\n",
-    "    [ \t\n",
-    "        { \"$sort\": { \"_id\": 1 } }, \t\n",
-    "        { \"$group\": { \t\n",
-    "            \"_id\": \"$job_id\", \t\n",
-    "            \"doc\": { \"$first\": \"$$ROOT\" } \t\n",
-    "        }}, \t\n",
-    "        { \"$replaceRoot\": { \"newRoot\": \"$doc\" } },\t\n",
-    "        { \"$out\": \"linkedins_analysis\"}\t\n",
-    "    ]\t\n",
-    "av)"
+    "SET TARGET TO SPECIFIC VALUE, IN THIS CASE AVAILABLE FIELD TO AVAILABLE"
    ]
   },
   {
@@ -57,12 +43,14 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "<pymongo.results.UpdateResult at 0x197cbd8b0c8>"
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x197cbd8b0c8>"
+      ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -71,16 +59,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DELETE FIELD TARGET IN THIS CASE"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "{'n': 1,\n 'nModified': 0,\n 'opTime': {'ts': Timestamp(1589635345, 43), 't': 2},\n 'electionId': ObjectId('7fffffff0000000000000002'),\n 'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589635345, 43),\n  'signature': {'hash': b'\\xa5pxB4\\x14\\xbb\\xa4Ahh\\x1a\\xf6\\xa8\\xcd\\x92\\xe9y5\\xd0',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589635345, 43),\n 'updatedExisting': True}"
+      "text/plain": [
+       "{'n': 1,\n",
+       " 'nModified': 0,\n",
+       " 'opTime': {'ts': Timestamp(1589635345, 43), 't': 2},\n",
+       " 'electionId': ObjectId('7fffffff0000000000000002'),\n",
+       " 'ok': 1.0,\n",
+       " '$clusterTime': {'clusterTime': Timestamp(1589635345, 43),\n",
+       "  'signature': {'hash': b'\\xa5pxB4\\x14\\xbb\\xa4Ahh\\x1a\\xf6\\xa8\\xcd\\x92\\xe9y5\\xd0',\n",
+       "   'keyId': 6821995709298900995}},\n",
+       " 'operationTime': Timestamp(1589635345, 43),\n",
+       " 'updatedExisting': True}"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -89,24 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "'Collection' object is not callable. If you meant to call the 'cloneCollection' method on a 'Collection' object it is failing because no such method exists.",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-2d7a3c92bb8d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinkedins_analysis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcloneCollection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Code\\linkedin\\.linkedin\\lib\\site-packages\\pymongo\\collection.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3338\u001b[0m                             \u001b[1;34m\"exists.\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3339\u001b[0m                             self.__name)\n\u001b[1;32m-> 3340\u001b[1;33m         raise TypeError(\"'Collection' object is not callable. If you meant to \"\n\u001b[0m\u001b[0;32m   3341\u001b[0m                         \u001b[1;34m\"call the '%s' method on a 'Collection' object it is \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3342\u001b[0m                         \u001b[1;34m\"failing because no such method exists.\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Collection' object is not callable. If you meant to call the 'cloneCollection' method on a 'Collection' object it is failing because no such method exists."
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "db.datasciences."
+    "SAVE AS CSV AND REMOVE FROM DATASET DATA SETS"
    ]
   },
   {
@@ -114,7 +119,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sectorea\\Code\\etl\\src\\python\\.etl\\lib\\site-packages\\ipykernel_launcher.py:4: DeprecationWarning: remove is deprecated. Use delete_one or delete_many instead.\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 10453,\n",
+       " 'opTime': {'ts': Timestamp(1600088684, 4266), 't': 13},\n",
+       " 'electionId': ObjectId('7fffffff000000000000000d'),\n",
+       " 'ok': 1.0,\n",
+       " '$clusterTime': {'clusterTime': Timestamp(1600088684, 4266),\n",
+       "  'signature': {'hash': b'\\n\\xd8J\\xbc\\x95\\xdf\\x15\\xf75\\xbea\\xdeF\\x9b\\xfe\\xf4O\\\\\\x13i',\n",
+       "   'keyId': 6821995709298900996}},\n",
+       " 'operationTime': Timestamp(1600088684, 4266)}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date_selected = \"2020-07-31\"\n",
+    "selection_date = datetime.strptime(date_selected, \"%Y-%m-%d\")\n",
+    "data = list(db.datasciences.find({\"posted\": {\"$lte\" : selection_date }}))\n",
+    "db.datasciences.remove({\"posted\": {\"$lte\" : selection_date }})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10453"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "keys = data[0].keys()\n",
+    "with open(date_selected + \".csv\", 'w', newline='', encoding=\"utf-8\")  as output_file:\n",
+    "    dict_writer = csv.DictWriter(output_file, keys)\n",
+    "    dict_writer.writeheader()\n",
+    "    dict_writer.writerows(data)"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,12 +222,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "Collection(Database(MongoClient(host=['cluster0-shard-00-02-79fkx.mongodb.net:27017', 'cluster0-shard-00-00-79fkx.mongodb.net:27017', 'cluster0-shard-00-01-79fkx.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', authsource='admin', replicaset='Cluster0-shard-0', ssl=True), 'jobs'), 'maria')"
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['cluster0-shard-00-02-79fkx.mongodb.net:27017', 'cluster0-shard-00-00-79fkx.mongodb.net:27017', 'cluster0-shard-00-01-79fkx.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', authsource='admin', replicaset='Cluster0-shard-0', ssl=True), 'jobs'), 'maria')"
+      ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -161,12 +242,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "['linkedins_clean', 'linkedins', 'linkedins_analysis']"
+      "text/plain": [
+       "['linkedins_clean', 'linkedins', 'linkedins_analysis']"
+      ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -198,9 +281,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "NameError",
      "evalue": "name 'process_text' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -251,18 +334,79 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(7253, 2)\n"
+     "output_type": "stream",
+     "text": [
+      "(7253, 2)\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "       job_id                                          key_words\n0  1855588339                                   python cloud nlp\n1  1842324264                                        python java\n2  1851657471  python scala java spark sql google aws cloud a...\n3  1829933627                                      python ai nlp\n4  1836277476                                          aws cloud",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>job_id</th>\n      <th>key_words</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1855588339</td>\n      <td>python cloud nlp</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1842324264</td>\n      <td>python java</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1851657471</td>\n      <td>python scala java spark sql google aws cloud a...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1829933627</td>\n      <td>python ai nlp</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1836277476</td>\n      <td>aws cloud</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_id</th>\n",
+       "      <th>key_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1855588339</td>\n",
+       "      <td>python cloud nlp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1842324264</td>\n",
+       "      <td>python java</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1851657471</td>\n",
+       "      <td>python scala java spark sql google aws cloud a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1829933627</td>\n",
+       "      <td>python ai nlp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1836277476</td>\n",
+       "      <td>aws cloud</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       job_id                                          key_words\n",
+       "0  1855588339                                   python cloud nlp\n",
+       "1  1842324264                                        python java\n",
+       "2  1851657471  python scala java spark sql google aws cloud a...\n",
+       "3  1829933627                                      python ai nlp\n",
+       "4  1836277476                                          aws cloud"
+      ]
      },
+     "execution_count": 37,
      "metadata": {},
-     "execution_count": 37
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -276,13 +420,44 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "Empty DataFrame\nColumns: [job_id, key_words]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>job_id</th>\n      <th>key_words</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_id</th>\n",
+       "      <th>key_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [job_id, key_words]\n",
+       "Index: []"
+      ]
      },
+     "execution_count": 38,
      "metadata": {},
-     "execution_count": 38
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -313,12 +488,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(34037, 3)"
+      "text/plain": [
+       "(34037, 3)"
+      ]
      },
+     "execution_count": 40,
      "metadata": {},
-     "execution_count": 40
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -334,6 +511,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.6.8 64-bit ('.etl': venv)",
+   "language": "python",
+   "name": "python36864bitetlvenv92ebda5305554df0b42bc915c6bbe21f"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -344,12 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python36864bitetlvenv92ebda5305554df0b42bc915c6bbe21f",
-   "display_name": "Python 3.6.8 64-bit ('.etl': venv)"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
